        2.6.16.27-0.9 (SLES 10)
       * Client support for unpatched kernels:
	(see https://mail.clusterfs.com/wikis/lustre/PatchlessClient)
	2.6.16 - 2.6.19 vanilla (kernel.org)
	2.6.9-42.0.8EL (RHEL 4)
       * Recommended e2fsprogs version: 1.39.cfs6
       * bug fixes
       * Note that reiserfs quotas are temporarily disabled on SLES 10 in this
	 kernel.

Severity   : normal
Frequency  : rare
Bugzilla   : 11315
Description: OST "spontaneously" evicts client; client has imp_pingable == 0
Details    : Due to a race condition, liblustre clients were occasionally
             evicted incorrectly.

Severity   : enhancement
Bugzilla   : 10997
Description: lfs setstripe use optional parameters instead of postional 
	     parameters.

Severity   : enhancement 
Bugzilla   : 10651
Description: Nanosecond timestamp support for ldiskfs
Details    : The on-disk ldiskfs filesystem has added support for nanosecond
	     resolution timestamps.  There is not yet support for this at
	     the Lustre filesystem level.

Severity   : normal
Frequency  : during server recovery
Bugzilla   : 11203
Description: MDS failing to send precreate requests due to OSCC_FLAG_RECOVERING
Details    : request with rq_no_resend flag not awake l_wait_event if they get a
	     timeout.

Severity   : minor
Frequency  : nfs export on patchless client
Bugzilla   : 11970
Description: connectathon hang when test nfs export over patchless client
Details    : Disconnected dentry cannot be found with lookup, so we do not need 
	     to unhash it or make it invalid

Bugzilla   : 12123
Description: ENOENT returned for valid filehandle during dbench.
Details:   : Check if a directory has children when invalidating dentries
	     associated with an inode during lock cancellation. This fixes
	     an incorrect ENOENT sometimes seen for valid filehandles during
	     testing with dbench.

--------------------------------------------------------------------------------
